@@ -184,7 +184,10 @@ the number of contexts that were previously used, and should now be garbage coll
 the number of V8 contexts that are free to use
 
 @RESTSTRUCT{max,v8_context_struct,integer,required,}
-the total number of V8 contexts we may spawn as configured by --javascript.v8-contexts
+the maximum number of concurrent V8 contexts we may spawn as configured by --javascript.v8-contexts
+
+@RESTSTRUCT{min,v8_context_struct,integer,required,}
+the minimum number of V8 contexts that are spawned as configured by --javascript.v8-contexts-minimum
 
 @RESTSTRUCT{memory,v8_context_struct,array,required,v8_isolate_memory}
 a list of V8 memory / garbage collection watermarks; Refreshed on every garbage collection run;
